<resources>
    <string name="app_name">Example</string>
    <string name="app_name_long">Privacy Friendly Example</string>
    <string name="app_prefix" translatable="false">Privacy Friendly</string>

    <!-- ###DRAWER###-->
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="action_main">Main</string>
    <string name="action_game">Game</string>
    <string name="action_tutorial">Tutorial</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ###MAIN### -->
    <string name="main_button_text">Full Width Button</string>
    <string name="main_button_disabled_text">Inactive Button</string>
    <string name="main_button_1">1</string>
    <string name="main_button_2">2</string>
    <string name="main_button_3">3</string>
    <string name="main_button_4">4</string>
    <string name="main_button_5">5</string>
    <string name="main_text_fullwithbutton_desc">A button that uses the full width of the screen looks like this:</string>
    <string name="main_text_disabledbutton_desc">A disabled button looks like this (any size):</string>
    <string name="main_text_title">This is an example app to demonstrate the design of a Privacy Friendly App. Further explanations can be found in the Privacy Friendly App Guide.</string>
    <string name="main_text_normalbutton_desc">There are multiple ways to display basic buttons. Button 1 is the basic button. If you wish to separate a button visually, use button 2. The buttons 3&#8211;5 are examples for highlighted buttons. Depending on the app other colors are possible.</string>
    <string name="main_button_welcomedialog_text">Use the button in the lower left corner to call the Welcome Dialog.</string>

    <!-- ###GAME###-->
    <string name="title_activity_game">Game</string>
    <string name="game_button_start">New Game</string>
    <string name="game_button_continue">Continue Game</string>
    <string name="game_desc">This is the default main menu for game apps. The viewpager above should be used to switch between game modes.</string>

    <!--###HELP###-->
    <string name="help">Help</string>

    <string name="help_whatis">What is Privacy Friendly App Example?</string>
    <string name="help_whatis_answer">Privacy Friendly App Example is an app that demonstrates the design of a Privacy Friendly App.</string>
    <string name="help_feature_one">Feature 1</string>
    <string name="help_feature_one_answer">Description of first feature.
Lorem ipsum dolor sit amet, eu ius alia fierent indoctum, ad pri sale tation. Elit dictas sit an, ad volumus urbanitas duo. Ei clita iracundia mel, eum et laoreet pertinax abhorreant. Nonumy suavitate dignissim quo id, ius audire prodesset adipiscing ei, altera saperet his et. Nostrud pertinax eu has, qui munere complectitur an.

Ne albucius perfecto adolescens eum, id choro assueverit mea, sed viris constituto ex. Per soleat impedit delicatissimi cu. Inermis volumus his ea, id quo praesent eloquentiam conclusionemque. Dolores mediocrem ad sit, ex cibo evertitur cotidieque eos.

    </string>
    <string name="help_privacy">What makes the app privacy-friendly?</string>
    <string name="help_privacy_answer">Privacy Friendly App Example does not require any permission. It further does not include any tracking mechanisms or advertisement.</string>
    <string name="help_permission">Which permissions requires the app?</string>
    <string name="help_permission_answer">Privacy Friendly App Example does not require any permission.</string>

    <!--###ABOUT###-->
    <string name="about">About</string>
    <string name="version_number">Version v%s</string>
    <string name="about_author_names" translatable="false">Karola Marky, Christopher Beckmann</string>

    <!-- ###SETTINGS### -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_example_switch">Example Switch</string>
    <string name="pref_example_switch_summary">Example Switch Summary</string>
    <string name="pref_example_summary">Example Summary</string>
    <string name="pref_example_action">Example Action</string>
    <string name="pref_example_action_summary">Clicking this may invoke something</string>
    <!-- ### TUTORIAL DIALOG ### -->
    <string name="slide1_heading">Welcome!</string>
    <string name="slide1_text">This App serves as a guideline to see the basic design of Privacy Friendly Apps. Here introduce your app in one or two sentences.</string>

    <string name="slide2_heading">Key Elements</string>
    <string name="slide2_text">Introduce key elements of your app. Do not introduce too many details.</string>

    <string name="slide3_heading">Github and Guide</string>
    <string name="slide3_text">The sourcecode of this app is available at GitHub. For further explanations have a look at the Privacy Friendly App Guide.</string>

    <string name="okay">Okay</string>
    <string name="viewhelp">View Help</string>
    <string name="main_floating_button">Floating Button</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>

</resources>
