<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    style="@style/AlertDialog.AppCompat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.secuso.privacyfriendlyexample.ui.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/main_text_title" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/main_text_normalbutton_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_text_normalbutton_desc" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="5">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_button_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/button_normal"
            android:text="@string/main_button_1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_button_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/button_middleblue"
            android:text="@string/main_button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_button_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/button_highlighted"
            android:text="@string/main_button_3"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_button_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="1"
            android:background="@drawable/button_highlighted_2"
            android:text="@string/main_button_4" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/main_button_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_weight="1"
            android:background="@drawable/button_highlighted_3"
            android:text="@string/main_button_5" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/button_fullwidth"
        android:text="@string/main_button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_button_disabled"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/button_disabled"
        android:text="@string/main_button_disabled_text"/>

    <com.google.android.material.button.MaterialButton
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Crash me"
        android:background="@drawable/button_fullwidth"
        android:id="@+id/crash_button" />

</LinearLayout>
