<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    style="?android:buttonBarStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.secuso.privacyfriendlyexample.ui.GameActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:layoutDirection="ltr">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/chooseGameTypeViewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <ImageView
            android:id="@+id/arrow_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:onClick="onClick"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_keyboard_arrow_left_black_24dp" />

        <ImageView
            android:id="@+id/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:onClick="onClick"
            android:padding="@dimen/activity_horizontal_margin"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:baselineAligned="false"
        android:divider="#000"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:weightSum="8"
        tools:context="tu_darmstadt.sudoku.ui.MainActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_weight="4"
            android:gravity="center"
            android:text="@string/game_desc" />

        <Button
            android:id="@+id/game_button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/button_fullwidth"
            android:onClick="onClick"
            android:text="@string/game_button_start"
            android:textColor="@color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/game_button_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@drawable/button_disabled"
            android:onClick="onClick"
            android:text="@string/game_button_continue"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </LinearLayout>

</LinearLayout>
